--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,12 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   intl_phone_field: ^3.1.0
   font_awesome_flutter: '>= 4.7.0'
-
+  google_fonts: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
